@@ -4,7 +4,8 @@ import jdk.jshell.spi.Execution
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
+
 
 public class FileReader implements StringTransformer
 
@@ -14,18 +15,22 @@ public class FileReader implements StringTransformer
     public string [] transform(String[] input) throws IOException
     {
 
-        var fileContents = new String() [input.length];
+        var fileContents = new String()[input.length];
 
         for (int= i = 0; i<input.length; i++) {
             try {
 
-            var content = Files.readAllLines(Paths.get(input[i]));
+            var content = Files.read(Path.of(input[i]));
             fileContents [i] = content;
-        } catch (IOException ex) {
+            } catch (IOException ex) {
                 System.out.println("Error: " + ex.getMessage());
                 fileContents[i] = "";
 
-
             }
+        }
+
+        return fileContents;
+
+
     }
 }
